[gd_scene load_steps=6 format=2]

[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemySpikey_2.png" type="Texture" id=1]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Tiles/Blue tiles/tileBlue_03.png" type="Texture" id=2]
[ext_resource path="res://TrashMonster.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 152.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 151.125, 91.125 )

[node name="TrashMonster" type="RigidBody2D"]
z_index = 1
mass = 10000.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 20, 20 )
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 2, 2 )
z_index = 1
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 100 )
scale = Vector2( 2, 2 )
z_index = 1
shape = SubResource( 2 )

[node name="openingLeft" type="Sprite" parent="."]
position = Vector2( -313, 105 )
scale = Vector2( 1, 3 )
texture = ExtResource( 2 )

[node name="openingRight" type="Sprite" parent="."]
position = Vector2( 313, 105 )
scale = Vector2( 1, 3 )
texture = ExtResource( 2 )

[node name="openingTopLeft" type="Sprite" parent="."]
position = Vector2( -220, -200 )
rotation = 0.785398
scale = Vector2( 1, 3 )
texture = ExtResource( 2 )

[node name="openingTopRight" type="Sprite" parent="."]
position = Vector2( 220, -200 )
rotation = -0.785398
scale = Vector2( 1, 3 )
texture = ExtResource( 2 )

[node name="firingTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="firingTimer" to="." method="_on_firingTimer_timeout"]
